--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,15 @@ description = "My Python Package" # TODO: Describe description.
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [
-    { name = "Keisuke Magara", email = "Keisuke-Magara.dev@outlook.com" },
+    { name = "keimag", email = "61485115+kei-mag@users.noreply.github.com" },
 ]
 keywords = []
 classifiers = ["Programming Language :: Python :: 3"]
-requires-python = ">=3.7"
+requires-python = ">=3.9"
 dynamic = ["version", "dependencies"]
 
 [project.urls]
-Source = "https://github.com/Keisuke-Magara/" # TODO: Replace repository URL
+Source = "https://github.com/kei-mag/" # TODO: Replace repository URL
 
 [tool.setuptools]
 package-dir = { "" = "src" }
@@ -36,6 +36,9 @@ line-length = 119
 [tool.isort]
 profile = "black"
 line_length = 119
+
+[tool.ruff]
+line-length = 119
 
 [tool.mypy]
 mypy_path = ["src"]
